--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                       <i class="fas fa-plus"></i>
                     </button>
                                 </div>
-                                <h5>$1219</h5>
+                                <h5>$ <span id="phn-price">1219</span></h5>
                                 <img src="images/remove.png" alt="" class="remove-item" />
                             </div>
                         </div>
